--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.application.name=ArticlesApp
 spring.profiles.active=local
 server.servlet.context-path=/api
 server.port=8080
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/article_db?serverTimeZone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=MichHMKSql
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+spring.liquibase.enabled=true
