--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.servlet.context-path=/api
 server.port=8080
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/article_db?serverTimeZone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=MichHMKSql
+spring.datasource.url=jdbc:postgresql://localhost:5432/<your_db_name>?serverTimeZone=UTC
+spring.datasource.username=<your_db_user>
+spring.datasource.password=<your_db_password>
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
