--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.servlet.context-path=/api
 server.port=8080
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/<your_db_name>?serverTimeZone=UTC
-spring.datasource.username=<your_db_user>
-spring.datasource.password=<your_db_password>
+spring.datasource.url=jdbc:postgresql://localhost:5432/article_db?serverTimeZone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=MichHMKSql
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
@@ -16,3 +16,6 @@ spring.jpa.open-in-view=false
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 spring.liquibase.enabled=true
+
+jwt.expiration=3600000
+jwt.secret=secret_key_sfx070423432429429xfs
